# prompttools

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FeedbackExample.ipynb  LICENSE  README.md  README.rst  chat_history_example.py  example.py  messages.txt  prompt.txt  prompt_template_example.py  pyproject.toml  requirements.txt  robustness_evaluation_part_1.py  robustness_evaluation_part_2.py  setup.py  system_prompt_example.py  template.txt  unit_test_example.py  user_input.txt  version.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  comment.yml  post-commit.yaml  python-package.yml
benchmarks/examples/: benchmarking.ipynb
docs/: README.md  requirements.txt
docs/source/: conf.py  experiment.rst  harness.rst  index.rst  modules.rst  playground.rst  prompttools.experiment.experiments.rst  prompttools.experiment.rst  prompttools.experiment.widgets.rst  prompttools.harness.rst  prompttools.mock.rst  prompttools.prompttest.error.rst  prompttools.rst  (+8 more)
examples/: FeedbackExample.ipynb  chat_history_example.py  system_prompt_example.py
prompttools/: __init__.py  chart.py  common.py  evaluation.py  example.py  experiment.py  harness.py  sentry.py  template.py  utils.py  version.py
scripts/: create_comment.py
streamlit/: playground.py
test/: app.py  requirements.txt  sender.py  test_experiment.py  test_harness.py  test_logger.py  test_scribe.py
ui/: README.md  constants.py  data_loader.py  playground.py  test.py
(+183 files in other folders)
